src/test/java/testfiles/invalid/semanticErr/generic_list/addWrongType.wacc
# basic list declaration and assignment

# Output:
# #empty#

# Exit:
# 200

# Program:

begin
  list<int> a = newlist() ;
  bool b = true ; 
  a.addToList(b)
end
